# cppnet

./: .clang-format  .clang-tidy  .clangd  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
.devcontainer/: Dockerfile.linux  docker-compose.yml
.github/workflows/: cmake.yml
cmake/: vcpkg.cmake
example/: CMakeLists.txt  main.cpp
example/http-get/: CMakeLists.txt  main.cpp
example/http-server/: CMakeLists.txt  main.cpp
example/ip-resolv/: CMakeLists.txt  main.cpp
example/tcp-echo-server/: CMakeLists.txt  main.cpp
include/: buffered_reader.hpp  buffered_writer.hpp  config.hpp  coroutines.hpp  dns.hpp  encoding.hpp  exception.hpp  io.hpp  ip_addr.hpp  ipv4_addr.hpp  ipv6_addr.hpp  listen.hpp  net.hpp  prefix_path_array.hpp  reader.hpp  result.hpp  socket.hpp  string_util.hpp  tcp.hpp  udp.hpp  url.hpp  util.hpp  writer.hpp
include/coro/: generator.hpp  promise.hpp  task.hpp  task_group.hpp  thread_pool.hpp  timeout.hpp
include/crypto/: aes.hpp
include/dns/: message.hpp  resolver.hpp
include/encoding/: base64.hpp  hex.hpp
include/http/: chunked_reader.hpp  chunked_writer.hpp  client.hpp  handler.hpp  headers.hpp  http.hpp  http11.hpp  http2.hpp  request.hpp  response.hpp  route_matchers.hpp  router.hpp  server.hpp
include/instrument/: system.hpp
include/instrument/opentelemetry/: protocol.hpp  tracecontext.hpp
include/instrument/prometheus/: buckets.hpp  counter.hpp  gauge.hpp  histogram.hpp  metric.hpp  registry.hpp  tracker.hpp
include/io/: buffer.hpp  buffered_reader.hpp  buffered_writer.hpp  encoding.hpp  epoll_loop.hpp  event.hpp  event_handler.hpp  event_loop.hpp  io.hpp  kqueue_loop.hpp  limit_reader.hpp  poll.hpp  reader.hpp  scheduler.hpp  string_reader.hpp  string_writer.hpp  util.hpp  writer.hpp
include/io/aio/: event.hpp  event_loop.hpp  poll.hpp  scheduler.hpp
include/io/aio/detail/: epoll_loop.hpp  event_handler.hpp  kqueue_loop.hpp  poll_info.hpp
include/pattern/: pattern.hpp
include/util/: buffer_pool.hpp  cache.hpp  coroutines.hpp  defer.hpp  fnv1a.hpp  hash.hpp  iterator.hpp  overloaded.hpp  packed.hpp  resource_pool.hpp  result.hpp  ring_buffer.hpp  string_map.hpp  string_util.hpp  thread_pool.hpp
src/: dns.cpp  exception.cpp  ip_addr.cpp  ipv4_addr.cpp  ipv6_addr.cpp  listen.cpp  main.cpp  net.cpp  socket.cpp  tcp.cpp  udp.cpp  url.cpp
src/coro/: thread_pool.cpp
src/crypto/: aes.cpp
src/dns/: resolver.cpp
src/encoding/: base64.cpp  hex.cpp
src/http/: chunked_reader.cpp  chunked_writer.cpp  client.cpp  headers.cpp  http.cpp  http11.cpp  http2.cpp  http_11.cpp  response.cpp  router.cpp  server.cpp
src/instrument/: system.cpp
src/instrument/opentelemetry/: protocol.cpp  tracecontext.cpp
src/instrument/prometheus/: buckets.cpp  counter.cpp  gauge.cpp  histogram.cpp  metric.cpp  registry.cpp
src/io/: buffer.cpp  buffered_reader.cpp  buffered_writer.cpp  epoll_loop.cpp  io.cpp  kqueue_loop.cpp  limit_reader.cpp  poll.cpp  reader.cpp  scheduler.cpp  util.cpp
src/io/aio/: event_loop.cpp  poll.cpp  scheduler.cpp
src/io/aio/detail/: epoll_loop.cpp  kqueue_loop.cpp
src/pattern/: pattern.cpp
src/util/: buffer_pool.cpp  thread_pool.cpp
test/: .clang-tidy  CMakeLists.txt  dns.cpp  ip_addr.cpp  main.cpp  string_util.cpp  test_server.go  url.cpp
test/coro/: thread_pool.cpp
test/encoding/: base64.cpp  hex.cpp
test/http/: http.cpp  http11.cpp  string_makers.hpp
test/instrument/opentelemetry/: protocol.cpp
test/instrument/prometheus/: buckets.cpp  histogram.cpp  registry.cpp
test/io/: buffered_reader.cpp  buffered_writer.cpp  string_reader.cpp  string_writer.cpp  util.cpp
test/util/: cache.cpp  resource_pool.cpp  ring_buffer.cpp  string_util.cpp  thread_pool.cpp
